fix vh and hero on mobile, change logos

--- a/css/style.scss
+++ b/css/style.scss
@@ -134,7 +134,8 @@ span {
 
 .hero {
 	z-index: -1;
-	height: 100vh;
+	height: 100vh; /* fallback for browsers that don't support custom properties */
+	height: calc(var(--vh, 1vh) * 100);
 	position: relative;
 	display: flex;
 	padding: 1em 2em;
